--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/form-observaciones/form-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-seguimiento-diario/components/form-observaciones/form-observaciones.component.html
@@ -5,7 +5,10 @@
         <div class="row">
           <div class="pr-1">
             <label class="label-left" for="tieneObservaciones"
-              [class.color-secondaryColor]="addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched">
+              [class.color-secondaryColor]="
+                (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                (addressForm.get('tieneObservaciones').invalid && estaEditando)"
+              >
               ¿Tiene observaciones al registro del seguimiento diario?
             </label>
           </div>
@@ -15,6 +18,15 @@
               <mat-radio-button class="mr-1em" [value]="false">No</mat-radio-button>
             </mat-radio-group>
             <span class="required-form-group">*</span>
+            <span class="icon-incompleto">
+              <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip" *ngIf="
+                  (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                  (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
