--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandados-dj/form-demandados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandados-dj/form-demandados-dj.component.html
@@ -152,7 +152,7 @@
                 </mat-card-content>
             </mat-card>
             <div class="text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminarPerfil( i )"
+                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminarPerfil( perfil.get( 'demandadoConvocadoId' ).value, i )"
                     [disabled]="perfiles.controls.length == 1">
                     <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia">
                     Eliminar demandado
