--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -226,7 +226,7 @@
                                 </mat-card-content>
                             </mat-card>
 
-                            <div class="row justify-content-center align-items-center" *ngIf="ensayo.get( 'registroCompletoMuestras' ).value === true">
+                            <div class="row justify-content-center align-items-center">
                                 <div class="col-md-12">
                                     <div class="row justify-content-center align-items-center" style="width: 100%;">
                                         <div class="pr-1">
@@ -242,7 +242,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="ensayo.value.tieneObservaciones == true && ensayo.get( 'registroCompletoMuestras' ).value === true" align="left">
+                            <div class="d-flex mt-2em align-items-center animatedDown" *ngIf="ensayo.value.tieneObservaciones == true" align="left">
                                 <div    class="text-area-quill"
                                         [class.color-secondaryColor]="ensayo.get('observacionEnsayo').invalid && ensayo.get('observacionEnsayo').touched || ensayo.get('observacionEnsayo').invalid">
                                     <label  class="text-area-quill--label align-left-label"
@@ -274,7 +274,7 @@
                                             *ngIf="ensayo.get('observacionEnsayo').invalid && ensayo.get('observacionEnsayo').touched || ensayo.get('observacionEnsayo').invalid">
                                 </span>
                             </div>
-                            <div class="text-center mt-1em" *ngIf="ensayo.get( 'registroCompletoMuestras' ).value === true">
+                            <div class="text-center mt-1em">
                                 <button mat-button
                                         color="warn"
                                         class="btn-guardar"
